--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,3 @@
-/* Текст (основний колір) #2E2F42 */
-
-/* Текст (вторинний колір) #434455 */
-
-/* Текст (акцентний колір) #E7E9FC */
-
-/* Лого та кнопка #4D5AE5 */
-
-/* Текст заголовка білий #FFFFFF */
-
-/* Фон акцентний темно синій #2E2F42 */
-
-/* Фон первинний світлий #FFFFFF */
-
-/* Фон вторинний світло-блакитний #F4F4FD */
-
-/* Фон підкладок під фото #E7E9FC */
-
 :root{
     --text-color:#2E2F42;
     --title-color:#434455;
@@ -50,32 +32,38 @@ img{
     display: block;
 }
 
-.site-body{}
+.list {list-style: none;}
+.link {text-decoration: none;}
+
+section{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 /* ------------------HEADER------------------ */
 
 body {font-family: 'Roboto', sans-serif;
-      background-color: var(--white);
-      color: var(--text-color);}
+    background-color: var(--white);
+    color: var(--text-color);}
 
 .header{
-    padding-top: 24px;
-    padding-bottom: 25px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .container{
-    width: 1158px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    /* border: 3px solid #000; */
+  width: 1158px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* border: 3px solid #000; */
 }
 
 .project-global{
-    display: flex;
-    align-content: center;
-    justify-content: center;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 
@@ -86,48 +74,44 @@ align-items: center;
 
 
 .header-container{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 
 .header-logo{
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.33;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--active-color);
-    margin-right: 76px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--active-color);
+  margin-right: 76px;
 
 }
 
 .header-item:not(:last-child){
-    margin-right: 40px;
+  margin-right: 40px;
 }
 
 
 .span-studio{color: var(--background-color);}
 .span-studio:hover {
-    color: var(--active-color);
+  color: var(--active-color);
 }
 
 .span-studio:focus {
-    color: var(--active-color);
-   }
+  color: var(--active-color);
+ }
 
 .header-logo:hover {
-    color: var(--active-color);
-    }
+  color: var(--active-color);
+  }
 
-    /* Site Navigation */
 
-.list {list-style: none;}
-.link {text-decoration: none;}
-
-.site-navigation{
+  .site-navigation{
     display: flex;
     align-items: center;
 }
@@ -210,89 +194,96 @@ line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--text-color);
     }
+    
+/* ----------------HERO------------------- */
 
+    .hero {
+        background-color: var(--background-color);
+        text-align: center;
+        }
 
-/* ------------------HERO------------------ */
+        .hero-box{
+            width: 550px;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+            /* height: 500px; */
+            }
 
-.hero {
-    background-color: var(--background-color);
-    height: 600px;
-    }
-.hero-position{
+        .hero-title{
+            font-weight: 600;
+            font-size: 56px;
+            line-height: 1.07;
+            text-align: center;
+            letter-spacing: 0.02em;
+            color: var(--white);
+            /* margin-top: 68px; */
+            margin-bottom: 48px;
+            }
+         
+        .btn-hover:hover,
+        .btn-focus:focus{
+            background-color: var(--pressed-color);
+        }
 
-}
-
-.hero-title{
-    font-weight: 600;
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--white);
-    padding-top: 188px;
-    padding-bottom: 48px;
-    }
- 
-.btn-hover:hover,
-.btn-focus:focus{
-    background-color: var(--pressed-color);
-}
-.hero-btn {
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 1.19;
-    align-items: center;
-    letter-spacing: 0.04em;
-    color: var(--btn-text);
-    cursor: pointer;
-    background-color: var(--active-color);
-}
-
-.header{
-
-}
-
+        .hero-btn {
+            /* margin-left: 493.84px;
+            margin-right: 493.84px; */
+            width: 169px;
+            height: 56px;
+            /* padding-top: 16px;
+            padding-bottom: 16px;
+            padding-left: 31px;
+            padding-right: 31px; */
+            border: none;
+            border-radius: 4px;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            font-family: inherit;
+            font-weight: 600;
+            font-size: 16px;
+            color: var(--btn-text);
+            cursor: pointer;
+            background-color: var(--active-color);
+           }
 
 
 /* ------------------SOLUTION------------------ */
+        
 
-.solution {
-}
-.solution-title {
-}
-.solution-organize{
-    width: 264px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.solution-list {
-    display: flex;
-    align-items: center;
-    margin-top: 120px;
-    margin-bottom: 120px;
-    justify-content: space-between;
-}
-/* .solution-list :not(:last-child){
-    margin-right: 24px; */
-/* } */
-.solution-subtitle {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-}
-
-.solution-text{
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-}
-
-
+           .solution {
+        }
+        .solution-title {
+        }
+        .solution-organize{
+            width: 264px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .solution-list {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        /* .solution-list :not(:last-child){
+            margin-right: 24px; */
+        /* } */
+        .solution-subtitle {
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+            color: var(--text-color);
+            margin-bottom: 8px;
+        }
+        
+        .solution-text{
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+        }
+ 
 /* --------------------SERVICES ----------------*/
 
 .services {
@@ -312,12 +303,11 @@ color: #434455;
     align-items: center;
 }
 .services-items{
-    margin-bottom: 120px;
 }
+
 .services-items:not(:nth-child(3n)) {
     margin-right: 24px;
 }
-
 
 /* --------------------TEAM -------------------*/
 
@@ -342,7 +332,6 @@ color: #434455;
 .team-item {
     background-color: var(--white);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    margin-bottom: 120px;
 }
 .team-organise{
     padding-top: 120px;
@@ -350,10 +339,10 @@ color: #434455;
 }
 
 .team-text-organise{
-    margin-top: 32px;
-    margin-bottom: 32px;
-    margin-right: 16px;
-    margin-left: 16px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-right: 16px;
+    padding-left: 16px;
 }
 
 .team-item:not(:nth-child(4n)) {
@@ -379,52 +368,13 @@ color: #434455;
     color: var(--team-text);
 }
 
-
-/*----------------- FOOTER----------------- */
-
-.footer{
-    background-color: var(--background-color);
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.footer-logo{
-    font-family: 'Raleway', sans-serif;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--background-light);
-}
-
-.footer-span{
-    color: var(--active-color);
-}
-
-.footer-text{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--FOTTER-P);
-    margin-top: 16px;
-}
-
-.footer-logo:hover,
-.footer-logo:focus{
-    color: var(--active-color);
-}
-
 /* ------------PROJECTS-------------- */
 
 .projects {
     border-top: 1px solid var(--line-border);
-    margin-bottom: 120px;
+    /* margin-bottom: 120px; */
 }
 .project-filter {
-    margin-top: 96px;
     margin-bottom: 72px;
 }
 .project-item:not(:last-child){
@@ -434,7 +384,8 @@ color: #434455;
 .project-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 48px;
+    column-gap: 24px;
    }
 .project-li {
     background-color: var(--white);
@@ -456,7 +407,9 @@ color: var(--title-color);
     padding-left: 16px;
     padding-top: 32px;
     padding-bottom: 32px;
-    border: 1px solid #E7E9FC;
+    border-bottom: 1px solid #E7E9FC;
+    border-left: 1px solid #E7E9FC;
+    border-right: 1px solid #E7E9FC;
     
 }
 
@@ -471,6 +424,10 @@ margin-top: 8px;
 .portfolio-btn{
 font-family: 'Roboto';
 font-style: normal;
+padding-top: 12px;
+padding-bottom: 12px;
+padding-left: 24px;
+padding-right: 24px;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -526,251 +483,13 @@ h1,h2,h3,h4,p {
     padding-left: 0;
 }
 
-.site-body{}
 
-/* ------------------HEADER------------------ */
-
-body {font-family: 'Roboto', sans-serif;
-      background-color: var(--white);
-      color: var(--text-color);}
-
-
-.header-logo{
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.33;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--active-color);}
-
-.span-studio{color: var(--background-color);}
-.span-studio:hover {
-    color: var(--active-color);
-}
-
-.span-studio:focus {
-    color: var(--active-color);
-   }
-
-.header-logo:hover {
-    color: var(--active-color);
-    }
-
-    /* Site Navigation */
-
-.list {list-style: none;}
-.link {text-decoration: none;}
-
-.site-navigation a{
-color: var(--text-color);
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 16px;
-line-height: 1.5;
-}
-
-.site-authorization a{
-color: var(--authorization);
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-}
-
-.header-link:hover{
-    color: var(--active-color);
-}
-
-.header-link:focus{
-    color: var(--active-color);
-}
-
-.header-tel{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--authorization);
-    }
-
-.header-mail{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--authorization);
-}
-    
-.header-mail:hover,
-.header-mail:focus{
-    color: var(--active-color);
-}
-
-.header-tel:hover,
-.header-tel:focus{
-    color: var(--active-color);
-}
-
-
-.visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-}
-
-.header-link {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-    }
-
-
-/* ------------------HERO------------------ */
-
-.hero {
-    background-color: var(--background-color);
-    
-}
-
-
-.hero-title{
-    margin-left: 0%;
-    margin-right: 0%;
-    font-weight: 600;
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--white);
-}
-
-
-
-.btn-hover:hover,
-.btn-focus:focus{
-    background-color: var(--pressed-color);
-}
-
-.hero-btn {
-    margin-left: 493.84px;
-    margin-right: 493.84px;
-    width: 169px;
-    height: 56px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-left: 31px;
-    padding-right: 31px;
-    border: none;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 16px;
-    color: var(--btn-text);
-    cursor: pointer;
-    background-color: var(--active-color);
-   }
-
-
-/* ------------------SOLUTION------------------ */
-
-.solution {
-}
-.solution-title {
-}
-.solution-list {
-}
-.solution-item {
-}
-.solution-subtitle {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-}
-
-.solution-text{
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-}
-
-
-/* --------------------SERVICES ----------------*/
-
-.services {
-}
-.services-title {
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--text-color);
-}
-.services-list {
-}
-
-
-/* --------------------TEAM -------------------*/
-
-.team {
-    background-color: var(--background-light);
-}
-.team-title {
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--text-color);
-}
-.team-list {
-}
-.team-item {
-    background-color: var(--white);
-}
-.team-photo {
-}
-.team-subtitle {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-}
-.team-text{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--team-text);
-}
-
-
-/*----------------- FOOTER----------------- */
+/* ----------------- FOOTER----------------- */
 
 .footer{
     background-color: var(--background-color);
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .footer-logo{
@@ -794,6 +513,7 @@ color: #434455;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--footer-text);
+    margin-top: 16px;
 }
 
 .footer-logo:hover,
@@ -801,76 +521,9 @@ color: #434455;
     color: var(--active-color);
 }
 
-/* ------------PROJECTS-------------- */
-
-.projects {
-}
-.project-filter {
- }
-
-.project-item {
-
-}
-.project-list {
-}
-.project-li {
-    background-color: var(--white);
-}
-.project-img {
-}
-
-.project-title {
-font-weight: 600;
-font-size: 20px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: var(--text-color);
-}
-
-.project-text {
-font-size: 16px;
-line-height: 1.28;
-Letter-spacing: 0.02em;
-color: var(--title-color);
-}
-
-.portfolio-btn{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.04em;
-color: var(--portfolio-text-btn);
-background-color: var(--portfolio-btn);
-cursor: pointer;   
-}
-
-.portfolio-btn-hover:hover{
-    background-color: var(--portfolio-tlo-hover-btn);
-    color: var(--portfolio-text-hover-btn);
-}
-.portfolio-btn-focus:focus{
-    background-color: var(--portfolio-tlo-hover-btn);
-    color: var(--portfolio-text-hover-btn);
+.footer-box{
+    width: 300px;
 }
 
 
-.project-link{
-font-weight: 600;
-font-size: 16px;
-line-height: 1.5;
-text-align: center;
-letter-spacing: 0.04em;
-color: var(--LOGO-WEB);
-background-color: var(--background-light);
-cursor: pointer;
-}
-
-.project-link:hover{
-    color: var(--white);
-    background-color: var(--logo-web);
-}
+        
